CMP-74 - Code improvements

--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -1,2 +1,2 @@
 "Accept online and POS payments via the CM.com platform.<br/> Choose your payment methods and accept payments on any channel or device.","Accept online and POS payments via the CM.com platform.<br/> Choose your payment methods and accept payments on any channel or device."
-"-- Please select --","-- Please select --"
+"-- Please select --","-- Veuillez sélectionner --"
