--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -1,2 +1,5 @@
 "Accept online and POS payments via the CM.com platform.<br/> Choose your payment methods and accept payments on any channel or device.","Accepteer alle online betalingen via het CM.com platform. Kies je betaalmethoden en accepteer betalingen op elk kanaal en apparaat."
 "-- Please select --","-- Selecteer --"
+"Date Of Birth:","Geboortedatum"
+"Enter Card Holder...","Voer kaarthouder in..."
+"Enter Card Number...","Voer kaartnummer in..."
