--- a/i18n/en_US.csv
+++ b/i18n/en_US.csv
@@ -1,2 +1,3 @@
 "Accept online and POS payments via the CM.com platform.<br/> Choose your payment methods and accept payments on any channel or device.","Accept online and POS payments via the CM.com platform.<br/> Choose your payment methods and accept payments on any channel or device."
 "-- Please select --","-- Please select --"
+"Date Of Birth:","Date of birth"
